--- a/intro.tex
+++ b/intro.tex
@@ -110,6 +110,6 @@ ABCD gives us the sought \emph{local feedback controller} for each individual sy
 \begin{figure}[t]
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/crane_and_lifter.png}
-	\caption{Illustration of the reference trajectories produced by ALTRO for the crane and the factory vehicle example}
+	\caption{Illustration of the reference trajectories produced by the open-loop planner for the crane and the factory vehicle example}
 	\label{fig:cr_and_lft}
 \end{figure}
