--- a/experiments.tex
+++ b/experiments.tex
@@ -10,7 +10,7 @@ The formal controller synthesis has been performed
 on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of
 RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
 
-We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates  runtimes of different stages for each of the experiment. The reported numbers for local synthesis correspond the maximum runtime among all of the robots for each experiment. Note that using global ABCD, memory requirement exceeds our system's limit (1.5TB of RAM) for all of the experiments.
+We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates  runtimes of different stages for each of the experiment. The reported numbers for local synthesis correspond the maximum runtime among all of the robots for each experiment. Note that using global ABCD, memory requirement exceeds our system's limit (1.5TB of RAM) for all of the experiments. \MS{For reporting number of input-state pairs and runtimes of local ABCD we can report total, average or maximum values; currently, Tab.~\ref{tab:runtimes} contains maximum values (taken over all of the agents, corresponding to multi-machine implementation), while total and average values are reported in the body of the paper. Data will be unified once the decision was made.}
 %Note that while reported numbers for local controller synthesis correspond to the total runtimes over all of the robots, significant reduction would be expected if abstraction and synthesis phases were parallelized.
 
 \begin{table*}
@@ -58,7 +58,7 @@ Suppose $\set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ is a set of control systems
 Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding obstacle $\obs\subseteq Y$ and collision with robots by the margin $\delta$.
 This specification can be expressed as a reach-avoid specification of the product system $\Sigma^\times$, as per the required form given in Sec.~\ref{sec:problem}, as follows:
 \begin{itemize}
-	\item The goal set $\goal\subseteq X$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X^\times$, and
+	\item The goal set $\goal\subseteq X^\times$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X^\times$, and
 	\item The static obstacle $\avoid\subseteq X^\times$ is defined as 
 		\begin{align}
 			&\avoid \coloneqq\nonumber\\ 
@@ -313,7 +313,7 @@ Finally, we study a lane merging problem wherein multiple controlled vehicles ar
 %\[
 %h^v(x(t))=x(t).
 %\]
-The model for each of the vehicles is the same as the drone model given in Sec.~\ref{sec:local reach-avoid} ($\Sigma^i=(X,x_\init^i,U,W,f^d)$). For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=110$, respectively. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Next, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$, $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. These selections yield discretized models with $|\hat X|=2.1\times 10^7$, $|\hat U|=406$ points. Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.32\end{bmatrix}^T$. This reduces size of state space into $|\hat P|=1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $195$ seconds ($32.5$ seconds in average) and synthesize controllers in $38.5$ seconds ($6.4$ seconds in average). Fig.~\ref{fig:merge} demonstrates snapshots of one sample trajectory when feedback controllers are employed under the presence of disturbance. Fig.~\ref{fig:multi_drone_distance} illustrates that open-loop controller fails in keeping one of the vehicles away from the road's sides under perturbed situation when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied throughout the whole horizon. In contrast, emplying feedback controller results in successful lane merging. %Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between of the vehicles from the road's sides with and without disturbance. In the absence of disturbance open-loop controller is capable of maintaing a minimum distance from the road's sides. Next, we consider the case when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied to the vehicle throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance from the road's side (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
+The model for each of the vehicles is the same as the drone model given in Sec.~\ref{sec:Multirobot} ($\Sigma^i=(X,x_\init^i,U,W,f^d)$). For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $T=110$, respectively. Given these settings, ALTRO generates a valid nominal trajectory in $100$ seconds. Next, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W|\leq\begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$. We choose state and input spaces for each vehicle's model to be $X=[-0.5,15]\times[0.1,7.4]\times[-1,0.4]$ and $U=[-0.9,3]\times[-2.1,2.1]$, respectively. State and input partition sizes are chosen as $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$. These selections yield discretized models with abstract state and input spaces having $2.1\times 10^7$ and $406$ points. Next, we limit the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon=\begin{bmatrix}0.16&0.16&0.16\end{bmatrix}^T$. This reduces size of state space into $1.9\times 10^5$ (in average). Given the above settings, SCOTS was able to compute abstraction in $195$ seconds ($32.5$ seconds in average) and synthesize controllers in $38.5$ seconds ($6.4$ seconds in average). Fig.~\ref{fig:merge} demonstrates snapshots of one sample trajectory when feedback controllers are employed under the presence of disturbance. Fig.~\ref{fig:multi_drone_distance} illustrates the fact that open-loop controller fails in keeping one of the vehicles away from the road's sides under perturbed situation when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied throughout the whole horizon. In contrast, emplying feedback controller results in successful lane merging. %Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between of the vehicles from the road's sides with and without disturbance. In the absence of disturbance open-loop controller is capable of maintaing a minimum distance from the road's sides. Next, we consider the case when constant additive disturbance vector $\begin{bmatrix}-0.03 &0.03&-0.03\end{bmatrix}^T$ is being applied to the vehicle throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance from the road's side (shown in solid red) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid green).
 
 
 
@@ -348,8 +348,8 @@ We show how the formation control problem can be expressed using a static obstac
 
 Let us first formalize the notion of formation.
 Let $\Set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)}$ be a set of robots.
-A \emph{formation constraint} is a set $\Set{\lambda^{i,j}\in \mathbb{R}^p}_{i,j\in [1;N]}$ where every $\lambda^{i,j}$ specifies the relative \emph{euclidean} distance between the output of robot $\Sigma^i$ and the output of robot $\Sigma^j$.
-(We use euclidean distance to define formation, as opposed to element-wise distance in the rest of the paper, to allow rotation of the formation while moving.)
+A \emph{formation constraint} is a set $\Set{\lambda^{i,j}\in \mathbb{R}}_{i,j\in [1;N]}$ where every $\lambda^{i,j}$ specifies the relative \emph{euclidean} distance between the projections of state of robot $\Sigma^i$ and robot $\Sigma^j$ over the shared output space $Y$.
+(We use euclidean distance to define formation, as opposed to the distance $D$ used in the rest of the paper, to allow rotation of the formation while moving.)
 
 Now suppose $\goal^i\subseteq X^i$ is the individual goal states, $\obs\subseteq Y$ is a common obstacle in the output space, $\delta \in \mathbb{R}^p_{>0}$ is a safety margin, and $\mu\in \mathbb{R}^p_{>0}$ is a tolerance margin for the formation constraint.
 The formation control problem then asks to generate controllers $\set{C_i}$ such that every robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\obs$ by the margin $\delta$, as well as while making sure that the \emph{euclidean} distance between robot $\Sigma^i$ and $\Sigma^j$ is in the range $\lambda^{i,j} \pm \mu$.
@@ -383,9 +383,9 @@ The model for each of the drones is the same as the drone model given in Sec.~\r
 %Synthesizing local controllers for every drone such that the specifications hold for the perturbed models, is performed similar to the previous examples. 
 We follow the steps outlined in Alg.~\ref{alg:abcd-with-time-for-tracking} to synthesize local controllers for every drone such that the specifications hold for the perturbed models with $|W|\leq \begin{bmatrix}0.03&0.03&0.03\end{bmatrix}^T$ and $\mu=0.5$. %We construct a tube around the (nominal) trajectory produced by ALTRO with the width vector $\varepsilon=\begin{bmatrix}??&??&??\end{bmatrix}^T$.
 We consider state and input spaces to be $X=[-2,17]\times[-2,17]\times[0.6,1.6]$ and
-$U=[-1,5]\times[-3,3]$, respectively. Choosing state and input partition sizes $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
+$U=[-0.9,4.8]\times[-3,3]$, respectively. Choosing state and input partition sizes $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
 $\eta_{U}=\begin{bmatrix}0.3&0.15\end{bmatrix}^T$ results in state and input spaces with $10^9$ and $820$ points. 
-Computing the transition system over inter-tube space with width $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$ results in smaller transition system with $4.9\times 5$ points. Given the above settings, SCOTS computes abstraction in $570$ seconds ($114$ seconds in average) and $140$ seconds ($28$ seconds in average). Fig.~\ref{fig:formation_ex} illustrates four sequential frames of a sample trajectory generated by employing feedback controllers. Noticeably, both of the relative position and orientation between drones is kept (almost) constant throughout the journey. Fig.~\ref{fig:formation_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the two of the drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line. However, when constant additive disturbance vectors $\begin{bmatrix}0 &0.03&0.03\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.03&-0.03\end{bmatrix}^T$ are being applied to the two drones throughout the whole horizon, open-loop controller fails, % that distance between the two drones (shown in solid green) becomes smaller than $\delta$. However, 
+Computing the transition system over inter-tube space with width $\varepsilon=\begin{bmatrix}0.18&0.18&0.18\end{bmatrix}^T$ results in smaller transition system with $4.9\times 5$ points. Given the above settings, SCOTS computes abstraction in $570$ seconds ($114$ seconds in average) and $140$ seconds ($28$ seconds in average). Fig.~\ref{fig:formation_ex} illustrates four sequential frames of a sample trajectory generated by employing feedback controllers. Noticeably, both of the relative position and orientation between drones are kept (almost) constant throughout the journey. Fig.~\ref{fig:formation_distance} illustrates performance of open-loop and feedback controllers on regulating distance between two of the drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line. However, when constant additive disturbance vectors $\begin{bmatrix}0 &0.03&0.03\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.03&-0.03\end{bmatrix}^T$ are being applied to the two drones throughout the whole horizon, open-loop controller fails, % that distance between the two drones (shown in solid green) becomes smaller than $\delta$. However, 
 whereasthe feedback controller is still capable of maintaining distance above the given threshold.
 
  \begin{figure}[t]
